--- a/style.css
+++ b/style.css
@@ -5,3 +5,18 @@ body {
 }
 
 
+.github-container > a {
+  text-decoration: none;
+  color: black;
+}
+
+.github-container{
+  border-radius: 8px;
+  border: 2px solid black;
+  padding: 5px;
+  box-shadow: 1px 2px 3px black;
+}
+
+.github-container:hover{
+  background-color: rgb(201, 201, 201);
+}
